# audio_viz

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  build.rs
.claude/skills/add-config-field/: SKILL.md
.claude/skills/cargo-check/: SKILL.md
.claude/skills/new-visualizer/: SKILL.md
.claude/skills/rebase-main/: SKILL.md
.claude/skills/review-visualizer/: SKILL.md
.claude/skills/tvos-add-view/: SKILL.md
.claude/skills/tvos-review/: SKILL.md
.claude/skills/update-viz-index/: SKILL.md
.github/workflows/: build.yml  tvos.yml
prototype/: audio_viz.sh
src/: dsp.rs  ffi.rs  lib.rs  main.rs  visualizer.rs
src/visualizers/: fire.rs  lissajous.rs  matrix.rs  mod.rs  plasma.rs  pulsar.rs  radial.rs  scope.rs  spectrum.rs  vu.rs
src/visualizers/abstract/: crystal.rs  orbit.rs
src/visualizers/effects/: aurora.rs  matrix.rs  nebula.rs  night_sky.rs  ripple.rs  tunnel.rs
src/visualizers/frequency/: radial.rs  spectrum.rs  waterfall.rs
src/visualizers/scopes/: classic_lissajous.rs  oscilloscope.rs  polar.rs
tvos/: CLAUDE.md  PLAN.md  app-publishing-for-dummies.md  build-rust.sh  make-placeholder-icons.sh  project.yml
tvos/AudioViz/: App.swift  AppState.swift  AudioViz-Bridging-Header.h  AudioViz.entitlements  ContentView.swift  Info.plist  RustBridge.swift
tvos/AudioViz.xcodeproj/: project.pbxproj
tvos/AudioViz.xcodeproj/project.xcworkspace/xcuserdata/luna.xcuserdatad/: UserInterfaceState.xcuserstate
tvos/AudioViz.xcodeproj/xcshareddata/xcschemes/: AudioViz.xcscheme
tvos/AudioViz/Assets.xcassets/AccentColor.colorset/: Contents.json
tvos/AudioViz/Assets.xcassets/App Icon & Top Shelf Image.brandassets/: Contents.json
tvos/AudioViz/Assets.xcassets/App Icon & Top Shelf Image.brandassets/App Icon - App Store.imagestack/: Contents.json
tvos/AudioViz/Assets.xcassets/App Icon & Top Shelf Image.brandassets/App Icon - App Store.imagestack/Front.imagestacklayer/Content.imageset/: Contents.json
tvos/AudioViz/Assets.xcassets/App Icon & Top Shelf Image.brandassets/App Icon.imagestack/: Contents.json
tvos/AudioViz/Assets.xcassets/App Icon & Top Shelf Image.brandassets/App Icon.imagestack/Back.imagestacklayer/: Contents.json
tvos/AudioViz/Assets.xcassets/App Icon & Top Shelf Image.brandassets/Top Shelf Image Wide.imageset/: Contents.json
tvos/AudioViz/Audio/: AudioEngine.swift  MusicPlayer.swift
tvos/AudioViz/Models/: ConfigModels.swift
tvos/AudioViz/Rendering/: CellRenderer.swift  VisualizerView.swift
tvos/AudioViz/Views/: LibraryView.swift  NowPlayingView.swift  SettingsView.swift  VisualizerPickerView.swift
tvos/bridge/: audio_viz.h  stub.c
web/: audio.js  index.html  main.js  processor.worklet.js
web/src/: lib.rs
